add bits of style to docs

--- a/docs/style.css
+++ b/docs/style.css
@@ -6,3 +6,51 @@
 :host([hidden]) {
   display: none;
 }
+:host h1 {
+  font-weight: 900;
+  line-height: 1.25;
+  padding-bottom: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 0;
+  border-width: .25rem;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  font-size: 2.25rem;
+}
+:host h2 {
+  font-size: 1.5rem;
+  color: #555;
+  line-height: 1.25;
+}
+:host p {
+  font-size: 1rem;
+  line-height: 1.5;
+  max-width: 34em;
+}
+:host ul {
+  margin: 0;
+}
+:host li {
+  padding-bottom: 1rem;
+  line-height: 1.25rem;
+}
+:host *:not(pre) > code {
+  padding: .25rem;
+  background-color: #777;
+  color: #eee;
+  border-radius: 2px;
+}
+:host pre {
+  margin: 0;
+  padding: .5rem;
+  background-color: #333;
+  color: #eee;
+  border-radius: 2px;
+  overflow-x: auto;
+  max-width: 100%;
+}
+@media screen and (min-width: 30em) {
+  :host p {
+    /* margin-top: 0; */
+  }
+}
